--- a/attestation/full-disk-encryption/Cargo.toml
+++ b/attestation/full-disk-encryption/Cargo.toml
@@ -20,6 +20,11 @@ efivar = "1.0.3"
 uuid = {version = "1.3.0", features = ["v5", "macro-diagnostics"]}
 zeroize = "1.6.0"
 webpki-roots = "0.22"
+rsa = { version = "0.9.6", features = ["sha2", "pem"] }
+sha2 = "0.10.8"
+rand = "0.8.4"
+aes-gcm = "0.9.3"
+generic-array = "1.0.0"
 #tdx-attest-rs = { git = "https://github.com/intel/SGXDataCenterAttestationPrimitives", tag = "DCAP_1.21" }
 tdx-attest-rs = { git = "https://github.com/amathew3/SGXDataCenterAttestationPrimitives.git", branch = "main" }
 
