--- a/attestation/full-disk-encryption/Makefile
+++ b/attestation/full-disk-encryption/Makefile
@@ -4,6 +4,7 @@ all:
 	cargo build --release
 	strip --strip-all target/release/fde-agent
 	go build gokeygen.go
+	go build genkeys.go 
 	
 clean:
 	cargo clean
